quickstart/config-sync/virtual-service-reviews-70-30.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 0
    - destination:
        host: reviews
        subset: v3
      weight: 100
    - destination:
        host: reviews
        subset: v2
      weight: 0
